almost done with hiragana

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
     </head>
 <body>
     <div class = "container">
-        <input type="text" id = "text_input" name="text_input" />
+    <textarea name = "text_input" type="text" id = "text_input"> </textarea>
+        
     </div>
     <script type="text/javascript" src="popup.js"></script>
 </body>
